1999-08-05  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* acinclude.m4 (grub_ASM_PREFIX_REQUIREMENT): New function.
	* configure.in: Call grub_ASM_PREFIX_REQUIREMENT, and define
	ADDR32 and DATA32 based on the result.
	* stage2/asm.S: Replace addr32 and data32 prefixes with	ADDR32
	and DATA32 respectively.
	
1999-08-05  Pavel Roskin  <pavel_roskin@geocities.com>

	* stage2/boot.c (load_image): Use RAW_ADDR macro when loading
	an a.out kernel.
	
1999-08-04  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/asm.S: Make each of the addr32 and data32 prefixes
	appear in the same line as it modifies, as the gas manual in
	binutils-2.9.5.0.4 says "it must be in the same line".
	
1999-08-04  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* boot.c (load_image): Fix a strcmp test. Reported by Pavel
	Roskin <pavel_roskin@geocities.com>.
	
1999-08-03  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From "Dan J. Walters" <djw@cs.utexas.edu>:
	* stage2/i386-elf.h (EI_BRAND): New macro.
	* stage2/boot.c (load_image): If the kernel is ELF, check if it
	is a FreeBSD kernel as well as a Multiboot kernel, and if it is 
	a FreeBSD kernel, then mask ENTRY_ADDR since FreeBSD requires
	that. Likewise, mask MEMADDR.
	(bsd_boot): Set the bi_symtab and the bi_esymtab members of BI
	only if MBI.FLAGS has the flag MB_INFO_AOUT_SYMS. Otherwise,
	clear them.
	
1999-07-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin <pavel_roskin@geocities.com>:
	* grub/getopt.c: New file. Copied from texinfo-3.12n.
	* grub/getopt1.c: Likewise.
	* grub/getopt.h: Likewise.
	* grub/Makefile.am (grub_SOURCES): Added getopt.c, getopt1.c and
	getopt.h.
	* configure.in: Check for string.h and strings.h.
	* grub/asmstub.c (grub_stage2): Fix a misordering in the output
	format of the inline assembly.
	
1999-07-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin <pavel_roskin@geocities.com>:
	* stage2/asm.S (get_diskinfo_standard): If the number of sectors